Dairy and photogrammetry blogpost

--- a/Journal/Daily/2024-06-21.md
+++ b/Journal/Daily/2024-06-21.md
@@ -6,37 +6,51 @@ auteur:
   - ChatGPT 4-o
   - Me
 ---
-# Journal entry for 2024-06-21
+# Journal entry for 2024-06-21 and 2024-06-22
 
 ## Summary of yesterday's entry
 
-Yesterday, I had a chicken burger wrap for dinner and rated the day a 5. In the morning, I learned that the project I was working on would not continue, so I focused on creating its documentation. The afternoon was spent helping someone learn React, during which I learned new design patterns. After work, I continued developing my LLM storyteller using the newfound knowledge and spent the evening gaming. Emotionally, I felt sad about the project's end but was relieved by the clarity, and I discussed Marwijn's death with colleagues, affecting my emotional responses. I was proud of my ability to help someone at an advanced React level and learn quickly. I also focused on self-improvement through gaming. Although helping someone was a selfless act, it provided me with personal learning opportunities. Practicing new skills felt meaningful, and while I managed to show some emotions and empathy, I wasn't entirely comfortable with the attention it drew.
+Yesterday, I had a chicken burger wrap for dinner and rated the day a 5. In the morning, I learned that the project I was working on would not continue, so I focused on creating its documentation. The afternoon was spent helping someone learn React, during which I not only assisted but also grasped new design patterns, a significant achievement. After work, I continued developing my LLM storyteller using the newfound knowledge and spent the evening gaming. Emotionally, I felt sad about the project's end but was relieved by the clarity, and I discussed Marwijn's death with colleagues, affecting my emotional responses. I was proud of my ability to help someone at an advanced React level and learn quickly. I also focused on self-improvement through gaming. Although helping someone was selfless, it provided me with personal learning opportunities. Practicing new skills felt meaningful, and while I managed to show some emotions and empathy, I wasn't entirely comfortable with the attention it drew.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: Booterham with speculoos
+**Grade for the day**: 7
 ### What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+2024-06-21
+**Morning**: Funeral of Martijn
+**Afternoon**: Doing groceries for the 12 uurs race
+**Evening**: 12 uurs race
+
+2024-06-22
+**Morning**: 12 uurs race
+**Afternoon**: sleeping
+**Evening**: more sleeping
 ## The questions
 
 1. **Emotional Awareness:**
-   Reflect on your emotional journey today. Did you experience similar feelings to yesterday, or did new emotions surface? What might have triggered these emotions, and how did you cope with them?
+   Reflect on your emotional journey today. Did you experience similar feelings to yesterday, or did new emotions surface? What might have triggered these emotions, and how did you cope?
+
+Before the service, I met my old colleagues from Lely, but I could not emotionally connect with them.
+During the service, I noticed some tears rolling from my eyes.
+
+During the 12 uurs race, I also did not connect with the people around me.
 
 2. **Self-Pride:**
-   Identify one or more moments from today that made you proud of yourself. How did these accomplishments make you feel about your personal and professional growth compared to yesterday?
+   Identify one or more moments from today that made you proud of yourself. Compared to yesterday, how did these accomplishments make you feel about your personal and professional growth?
+
+Today, I took a step towards personal growth by attending Marwijn's service, a challenging and unfamiliar experience. Despite the emotional weight, I felt the need to be there, and this act of self-reflection and empathy made me proud of my emotional resilience.
+
+I did prepare well for the 12 hours. The only thing was that I did not have a great variety of food (I served knacks on bread five times). I had people and stuff and the travel to Oosterland.
+And the children were tired, which is a good sign.
 
 3. **Healthy Egotism:**
-   Think back on instances where you balanced selflessness and self-interest today. Did you manage to focus on your needs without feeling guilty? Describe one action where you took time or resources for yourself, and how it impacted your sense of self-worth.
+   Think back on instances where you balanced selflessness and self-interest today. Did you manage to focus on your needs without feeling guilty? Describe one action where you took time or resources for yourself and how it impacted your sense of self-worth.
+   
+After the service, I made a conscious decision to prioritize my emotional well-being by leaving early. I recognized my need for personal space and took action to meet it, a crucial aspect of self-care that I'm learning to value more. 
 
 4. **Meaningful Activities:**
    Reflect on something worthwhile you did today. How does it compare to practicing new skills yesterday? What new insights did you gain, and how do you feel this activity contributed to your personal or professional development?
 
-5. **Comfort with Attention:**
-   How did you feel about the attention you received today when you expressed your emotions or shared your achievements? Compare this to yesterday's experience. Did you feel more at ease, or were there still moments of discomfort? What can you learn about yourself from these reactions?
-
-Use these questions
+These two days were in the service of executing the 12 uurs, which would only be possible for the group with me. So that is worthwhile.
