--- a/Journal/Daily/2024-06-23.md
+++ b/Journal/Daily/2024-06-23.md
@@ -1,35 +1,43 @@
 ---
 tags:
   - Journal
-created: 2024-06-23
+created: 2024-06-24
 auteur:
   - ChatGPT 4-o
   - Me
 ---
-# Journal entry for 2024-06-23
+# Journal entry for 2024-06-24
 
 ## Summary of yesterday's entry
 
-Yesterday's journal entry covered a productive and emotional day, starting with a healthy breakfast and completing a significant work project in the morning. In the afternoon, an important meeting went well, providing a sense of accomplishment. Post-work, a run helped relieve stress, and dinner with a close friend provided comfort and joy. The day's emotional spectrum included pride from work achievements and moments of gratitude during dinner. A task that stood out as meaningful was the successful project, aligning with career goals. Self-awareness was heightened through balancing work and self-care. Recognition during the meeting felt validating, contributing to a strong sense of self-worth. The day was rated highly, reflecting both personal and professional satisfaction.
+Over the last two days, I attended Marwijn's funeral service, where I struggled to emotionally connect with former colleagues, though I shed some tears during the service. I participated in the 12-hour race (12 uurs race), which I had meticulously prepared for, including doing the groceries and ensuring the children were adequately tired. Despite minimal food variety (knaks on bread), I felt proud of my involvement and management of the event logistics. My emotional journey included moments of detachment and fulfillment, highlighting a balance of selflessness and self-interest as I left the service early to avoid conversations. These experiences underscored my role's importance and contribution to the event's success.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: Knaks on bread (Matthijs made a dish with too much greens)
+**Grade for the day**: 6
 ### What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: programming on CartoCam
+**Afternoon**: Working on osm
+**Evening**: Cleaning
 ## The questions
 
-1. Reflecting on today, what emotions did you experience, and what events triggered them? How do these feelings compare to yesterday’s?
+1. **Feeling Awareness:** Reflecting on the most intense emotions you experienced today, what were they, and at what moments did you feel them? How did you respond to these feelings?
 
-2. What actions or achievements from today make you feel proud of yourself? How do these compare to the sense of accomplishment felt from yesterday’s successful project?
+I was mainly physically tired from staying awake for 30+ hours for the 12 uurs race.
 
-3. In what ways did you prioritize your own needs or desires today, balancing self-care with giving to others? How does this compare to how you managed this balance yesterday?
+2. **Self-Pride:** Identify a moment from today that made you proud of yourself. What was the situation, and what qualities or actions of yours contributed to this sense of pride?
 
-4. What is one activity or task from today that you found particularly worthwhile? Was it as meaningful as the project you completed yesterday? Why or why not?
+I noticed that my site CartoCams had 10s of users. This made me feel proud of what I had done.
+It made me want to work on the site more and that is what I did.
 
-5. How did the recognition you received today (if any) contribute to your sense of self-worth? Did it make you feel as valued as the recognition during your meeting yesterday?
+
+3. **Healthy Self-Interest:** Consider an instance today where you prioritized your needs over others. Describe the situation and your decision-making process. How did this impact your feelings of self-worth?
+
+I did not do anything that I did not want to do. At night, I did some things that were expected of me
+
+
+4. **Presence at Events:** How did you emotionally engage with people around you today? Compare this to your interaction efforts from Marwijn's funeral service. What steps can you take to deepen these connections?
+
+There were no connections to be had.
