--- a/Journal/Daily/2024-06-24.md
+++ b/Journal/Daily/2024-06-24.md
@@ -10,31 +10,55 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday's journal entries describe a day that began with a productive morning filled with successful client meetings, followed by a somewhat stressful afternoon dealing with unexpected project hurdles. After work, you enjoyed a relaxing yoga session, and in the evening, you had a quiet dinner of grilled chicken and vegetables. You rated the day a "B+" overall. Emotionally, you felt satisfaction from morning successes, frustration from afternoon challenges, and calmness from evening relaxation, mirroring a similar emotional roller-coaster from the previous day. You felt proud of your problem-solving abilities but noted that it didn't quite match the exhilaration of the major project win from yesterday. Self-care included the yoga session, which you felt balanced well with your supportive role at work, comparable to yesterday's efforts. You found the problem-solving work particularly worthwhile, though not as impactful as the previous day's landmark project. Recognition from your team gave a boost to your self-worth, though it didn't quite match the praise received during the big meeting the day before.
+Yesterday, I had Knaks on bread for dinner since Matthijs prepared a dish with too many greens. I rated the day a 6 out of 10. In the morning, I worked on programming for CartoCam, and in the afternoon, I focused on tasks related to OSM. By the evening, I spent time cleaning. Throughout the day, I was physically exhausted from staying awake for over 30 hours for the 12-hour race, which was the most intense emotion I experienced. A sense of pride came from seeing that my site, CartoCams, had tens of users, motivating me to improve it further. I did not prioritize anyone else's needs over mine, and by the evening, I did some things that were expected of me. There were no notable emotional engagements with others, similar to my experience at Marwijn's funeral service.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: Spinazi penne
+**Grade for the day**: 5
 ### What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: I did some OSM because I do not have a project at work
+**Afternoon**: Coached a colleague on React
+**After work**: Did some test for what camera is best for photogrammetry
+**Evening**: worked some more on the research
 ## The questions
 
-1. **Emotional Reflection:**
-   What feelings and emotions did you experience today during various parts of your day (morning, afternoon, evening)? How did these compare to yesterday's emotions? 
+1. **How did I feel throughout the day?**
+   - Reflect on positive and negative emotions, and consider what specifically triggered these feelings. Think about moments that made you feel proud, exhausted, happy, or indifferent.
 
-2. **Pride and Achievement:**
-   Identify one thing you did today that made you proud of yourself. How did this feeling of pride compare to the recognition you received from your team yesterday, and what did you learn from both experiences?
+I felt guilty because I was doing personal stuff on company time.
+But they are responsible for my having something to do.
 
-3. **Self-Care and Balance:**
-   Reflect on any self-care activities you engaged in today. How did they contribute to balancing your personal needs with your role at work? How did today's self-care compare to the relaxation you felt during your yoga session yesterday?
+It felt good to explain things to the colleague.
 
-4. **Ego and Self-Worth:**
-   Describe an instance today where you set boundaries and took time for yourself rather than giving to others. How did this action make you feel, especially in the context of the self-worth boost you got from your team's recognition yesterday?
+2. **What three things I accomplished today made me feel proud or satisfied?**
+   - These can be big or small achievements, including any work done for CartoCams, personal tasks completed, or moments where you focused on your needs.
 
-5. **Worthwhile Activities:**
-   What was the most worthwhile thing you did today? How does this compare to the problem-solving work you found worthwhile yesterday? How does today’s worthiness contribute to your goals?
+Besides that, the work I'm doing for OSM is significant and can potentially benefit countless people, which is a source of pride and motivation for me.
+
+I do feel that I did nothing worthwhile today.
+
+I feel proud that I caught some hints that one of my other colleagues was dropping.
+And that I assist the college, whom I am helping, correctly. (or at least similar to the other people around)
+
+3. **How did I balance my needs and those of others today?**
+   - Reflect on situations where you prioritized your needs over others and moments when you helped someone else. Consider whether this balance felt right for you.
+
+There was no balancing to be done.
+
+However, by helping the college, I demonstrated my knowledge to those around me, which set me up for a new project.
+
+
+4. **Did I engage in any actions today that I consider worthwhile or fulfilling? Why or why not?**
+   - Think about activities or tasks that contributed to your fulfillment, whether related to work, personal projects, or other endeavors. If there were none, consider what barriers might have prevented this.
+
+Helping the colleague is fulfilling.
+
+## Plans for Tomorrow
+
+I need to talk to my BM to plan the next steps.
+
+I need to clear out my grandmother's house in the evening.
+
+decide on the tent I'm bringing to Defqon 1
