journaled and made the journal better

--- a/Journal/Daily/2024-06-25.md
+++ b/Journal/Daily/2024-06-25.md
@@ -10,31 +10,61 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday, I spent the morning working on OpenStreetMap (OSM) due to a lack of work tasks, and in the afternoon, I coached a colleague on React, which felt rewarding. After work, I tested cameras for photogrammetry and continued research in the evening. I felt guilty about doing personal tasks during work hours but appreciated the impact of my OSM contributions. Achievements included helping a colleague, which boosted my satisfaction, and recognizing hints from another coworker. Although I lacked a balance between personal and others' needs, aiding my colleague was fulfilling. Plans for today include speaking with my Business Manager (BM), clearing out my grandmother's house, and deciding on a tent for Defqon 1. My dinner was spinach penne, and I rated the day a 5/10.
+Yesterday, I spent the morning working on OpenStreetMap (OSM) due to a lack of work tasks, and in the afternoon, I coached a colleague on React, which felt rewarding. After work, I tested cameras for photogrammetry and continued research in the evening. I felt guilty about doing personal tasks during work hours but appreciated the impact of my OSM contributions. Achievements included helping a colleague, which boosted my satisfaction, and recognizing hints from another coworker. Although I lacked a balance between personal and others' needs, aiding my colleague was fulfilling. Plans for today include:
+- Speaking with my Business Manager (BM).
+- Clearing out my grandmother's house.
+- Deciding on a tent for Defqon 1.
+My dinner was spinach penne, and I rated the day a 5/10.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+**What did you have for dinner**: friet, topstick en mexicano from the pollepel
+**Grade for the day**: 6
 ### What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: overslept and set a challenge for my colleagues
+**Afternoon**: I tried to match my colleague's work
+**After work & Evening**: cleared out grandmas house
 ## The questions
 
-1. Reflecting on Today’s Emotions:
+1. Reflecting on Today's Emotions:
    - What were the most prominent feelings you experienced today? Can you pinpoint when and why they occurred?
+
+I did not have any big emotions today.
+
+I felt excited for defqon.1.
+
+I was glad to talk to Arjan about how he and Vector are doing.
 
 2. Acknowledging Your Achievements: 
    - What is one thing you did today that made you feel proud? How did that accomplishment make you feel about yourself?
 
+I could just whip up some HTML and CSS to replicate a design. It needs some polishing, but I'm going the right way.
+
+Also, we moved all the stuff from the attic to the second floor in a short time.
+
 3. Balancing Self and Others:
-   - Did you manage to balance giving to others and taking time for yourself today? Provide an example of how you achieved (or struggled with) this balance.
+   - Did you balance giving to others and taking time for yourself today? Provide an example of how you achieved (or struggled with) this balance.
+
+There was little me time today. Although, I did take some time during the work day.
 
 4. Doing Something Worthwhile:
    - What activity or task did you engage in today that you consider worthwhile? Why was it meaningful to you?
 
+We are slowly clearing out Grandma's house so we can sell it.
+And then we are done with it.
+
 5. Addressing Guilt and Self-Appreciation:
    - Reflecting on any feelings of guilt or self-criticism today, is there something you could do differently to turn those feelings into positive actions or self-appreciation tomorrow?
+
+I need to be proactive to get a new project. I can't just wait for them to figure it out.
+
+## Plans for Tomorrow
+
+Show my face on the third floor.
+
+Find and buy a tent
+
+Pack for defqon.1
+
+asses the colleague
