--- a/Journal/Daily/2024-06-26.md
+++ b/Journal/Daily/2024-06-26.md
@@ -22,13 +22,13 @@ Yesterday, I rated my day a six and had friet, topstick, and mexicano for dinner
 **Morning**: unknown
 **Afternoon**: working with the colleague on his React skills
 **After work**: buying a tent
-**Evening**: pakking for defqon.1
+**Evening**: Pakking for Defqon.1
 
 ## The questions
 
 1. You mentioned feeling excited about Defqon.1. Could you elaborate on what Defqon.1 is and why it's significant to you
 
-I've listened to hard-style music since high school. And Defcon is the place where this is celebrated most. I went in 2016 and 2017 but did not find the time afterward.
+I've listened to hardstyle music since high school. And Defcon is the place where this is celebrated most. I went in 2016 and 2017 but did not find the time afterward.
 This is the first year I could motivate myself to go again.
 
 2. what is the context around catching up with Arjan—how did that interaction go, and how long has it been since you last saw them?
@@ -65,14 +65,14 @@ I bought some stuff
 
 I did not go to the third flow in contrast to my needs.
 
-I'm still late in packing for defqon.1, but Im earlier than usual.
+I'm still late in packing for Defqon.1, but Im earlier than usual.
 
 ## Plans for Tomorrow
 
 Finish work.
 
-Buy the last stuff for defqon.
+Buy the last stuff for Defqon.
 
-Enjoy defqon.
+Enjoy Defqon.
 
-Please make all questions about defqon. I want to expand on that more.
+Please make all questions about Defqon.1. I want to expand on that more.
