--- a/Journal/Daily/2024-06-28.md
+++ b/Journal/Daily/2024-06-28.md
@@ -6,45 +6,38 @@ auteur:
   - ChatGPT 4-o
   - Me
 ---
-# Journal entry for 2024-06-28
+# Journal entry for Friday 2024-06-28
 
 ## Summary of yesterday's entry
 
-Yesterday, I had lasagna for dinner and rated the overall day positively. In the morning, I started with a run and a healthy breakfast, then worked on coding tasks. Afternoon was spent helping a colleague with React skills, focusing on component lifecycle and state management, followed by a productive tent store visit where I bought a lightweight tent and felt proud of my negotiation skills. After work, I packed for Defqon.1 and took a brief moment to plan my week. Evening activities included family time, which enhanced my emotional awareness, and some leisure reading. Reflecting on my day, the key achievements were assisting my colleague, a successful purchase, and self-care moments, all contributing to my personal growth and sense of purpose. Looking ahead to improve, I aim to maintain this balance of productivity, interpersonal support, and self-care.
+Yesterday, I rated the day a 7 and had Turkse pizza for dinner. My morning was spent at work, followed by last-minute shopping and driving to Defqon.1 in the afternoon. In the evening, I enjoyed hakkûh at Defqon.1. Reflecting on my goals, I noted a lack of emotional awareness and meaningful connections compared to the previous day's reconnection with Arjan. Despite challenges like an unclear parking location, a bus breakdown, and navigating the camping area, I successfully managed to arrive and have a great time at the festival. My plans for tomorrow include more hakkûh at Defqon.1.
+
+## Questions about yesterday
+
+1. You mentioned dealing with uncertainties on your journey to Defqon.1, such as parking issues, the bus breaking down, and figuring out the camping arrangement. How did you manage these challenges, and what did you learn from these experiences?
+
+I could not have prepared any better because there was no more infromation to read. I just had to go with the flow. which worked out fine.
+
+2. In your reflection, you noted that you didn't have moments of emotional connection or self-awareness today. Can you explore why that might have been the case? Did the excitement or stress of preparing and traveling to Defqon.1 play a role?
+
+I think this is a broughter issue. I have a hard time connecting with my emotions. I think I need to work on this.
+
+3. You stated that going to Defqon.1 felt like a worthwhile endeavor and that you had a great time. Could you describe in more detail what specific moments or activities at Defqon.1 made it so enjoyable and fulfilling for you?
+
+On frighday I saw a artist I wanted to see. (miss k8). I also enjoyde all the people being wierd and having a good time.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
+A lot of other things happed on defqon.1. I was tired most of the time but did have a great time after I mannaged to pull myself together.
 
-### What did you do today?
+I saw a lot of artists I wanted to see. I also enjoyed the people and the music. I made a lot of photos and videos. altough I dont think most of them are any good.
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+## notes for the next journal entry
 
-## The questions
+Im writing this on the 4th because I did not keep up with my journal I will skip some days and on the 4th I will write a summary of the days I missed.
 
-1. Can you share more about the coding tasks you worked on in the morning, and what specific aspects you found challenging or rewarding?
-2. What were some key topics or techniques you discussed with your colleague regarding React’s component lifecycle and state management?
-3. Could you describe your experience during family time and how it enhanced your emotional awareness?
+on the 1st was leaving day of deqon.1. I was tired and had a hard time getting up. I had to pack my tent and stuff. I also had to drive home. I was tired and had a hard time staying awake. I did not help that i had a meeting at 1300 that i needed to attend.
 
----
+on the 2nd I had a meeting at 1300. I was tired and had a hard time staying awake. It was the first day that I was realy Idle at work. (Idle beeing between projects), I decided on a side project of fixing gitjournal. I made some progress but it was hard work and in a new language, Dart.
 
-1. **Reflecting on Today’s Emotional Awareness:**
-   How did you feel throughout the day? Were there specific moments where you noticed a significant emotional reaction? Compare these feelings to yesterday's house and family time. How did your awareness of them shift or deepen?
-
-2. **Pride Check-In:**
-   In what ways did you make yourself proud today? Look back at how you felt proud yesterday after negotiating for a tent and compare it to today's achievements. Did you notice any difference in the sense of pride?
-
-3. **Balancing Selflessness and Self-Interest:**
-   How did you balance your needs with helping others today? Recall yesterday, where you helped a colleague but also focused on your own tasks. Did you manage a similar balance today? How did it make you feel?
-
-4. **Worthwhile Achievements:**
-   Did you do something today that felt worthwhile? Reflect on your productivity and meaningful activities from yesterday like the tent purchase and family time. How do today's actions compare in terms of impact and fulfillment?
-
-5. **Improving for Tomorrow:**
-   Based on your reflections, what is one thing you can do differently or continue doing to better reach your goals tomorrow? Look at the successes and areas for improvement from yesterday – how will you
-
-## Plans for Tomorrow
+On the 3rd I worked from home but I could not motivate myself to contiure on the dart project.
